# restorebot_moveit_desc

./: CMakeLists.txt  README.md  package.xml
config/: (OLD) stomp_planning.yaml  chomp_planning.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  restorebot.srdf  stomp_planning.yaml
include/: fmt_shortcut_restorebot.h
launch/: chomp_planning_pipeline.launch.xml  chomp_planning_restorebot.launch  collision_test.launch  default_warehouse_db.launch  demo.launch  demo_chomp.launch  demo_executor.launch  executor_planning_pipeline.launch.xml  executor_planning_restorebot.launch  fake_moveit_controller_manager.launch.xml  fmt_shortcut_restorebot.launch  hybrid_planning_restorebot.launch  motion_planning_restorebot.launch  move_group.launch  move_group_executor.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  stomp_comparison.launch  stomp_planning_pipeline.launch.xml  trajectory_execution.launch.xml  warehouse.launch
src/: chomp_planning_restorebot.cpp  collision_test.cpp  executor_planning_restorebot.cpp  fmt_shortcut_restorebot.cpp  hybrid_planning_restorebot.cpp  motion_planning_restorebot.cpp  stomp_comparison.cpp
